<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Buddy</string>
    <string name="home">Beranda</string>
    <string name="streak_jurnal">Jurnal Streak</string>
    <string name="integer">%i</string>
    <string name="your_journal">Jurnal Kamu</string>
    <string name="make_journal">Buat Jurnal</string>
    <string name="gambar_jurnal">Gambar Jurnal</string>
    <string name="journal_title">Judul Jurnal</string>
    <string name="journal_content">Konten Jurnal</string>
    <string name="journal_date">Tanggal Jurnal</string>
    <string name="history_journal_title">Judul jurnal: </string>
    <string name="timestamp">Timestamp</string>
    <string name="journal_content_hint">Bagaimana perasaanmu hari ini?</string>
    <string name="journal_save">Simpan Jurnal</string>
    <string name="pick_image">Pilih Foto</string>
    <string name="crop_error">Terjadi error saat memotong gambar</string>
    <string name="back">Kembali</string>
    <string name="journal_cover_default">Cover Jurnal Default</string>
    <string name="analisis_jurnal">Analisis Jurnal</string>
    <string name="see_result">Lihat Hasil Analisis Jurnal</string>
    <string name="edit_jurnal">Edit Jurnal</string>
    <string name="empty_journal">Jurnal Kosong</string>
    <string name="journal_not_saved">Journal Belum Tersimpan</string>
    <string name="back_alert_description">Jika kembali sekarang, kamu akan kehilangan cerita yang sudah kamu buat.</string>
    <string name="continue_journal">Lanjutkan Cerita</string>
    <string name="delete_journal_alert">Jurnal yang telah dihapus tidak dapat dikembalikan lagi. Apakah kamu yakin ingin menghapus jurnal ini?</string>
    <string name="option_delete_yes">Hapus</string>
    <string name="cancel_delete">Tidak</string>
    <string name="empty_journal_title">Judul jurnal tidak boleh kosong</string>
    <string name="empty_journal_description">Konten jurnal tidak boleh kosong</string>
    <string name="empty_journal_image">Gambar jurnal tidak boleh kosong</string>
    <string name="journal_updated">Jurnal berhasil diubah</string>
    <string name="journal_saved">Jurnal berhasil disimpan</string>
    <string name="analysis_result">Hasil Analisis</string>
    <string name="positive_rate">Tingkat positif cerita kamu</string>
    <string name="negative_rate">Tingkat negatif cerita kamu</string>
    <string name="positive_word_count">Jumlah Kata Positif</string>
    <string name="negative_word_count">Jumlah Kata Negatif</string>
    <string name="change_result">Lihat hasil lainnya</string>
    <string name="see_more"><u>Lihat Detail</u></string>
    <string name="close_see_more"><u>Tutup Detail</u></string>
    <string name="empty">-</string>
    <string name="negative_words">Kata-kata negatif : %s</string>
    <string name="positive_words">Kata-kata positif : %s</string>
    <string name="current_streak">Streak Saat Ini</string>
    <string name="highest_streak">Streak Tertinggi</string>
    <string name="history_journal">Riwayat Jurnal</string>
    <string name="ayo_buat_jurnalmu_sekarang">Ayo Buat Jurnalmu Sekarang!</string>
    <string name="desc_journal">Ekspresikan Harimu dengan Cerita</string>

    <string name="feeling_ask">Bagaimana suasana hatimu hari ini,</string>
    <string name="happy">Gembira</string>
    <string name="soso">Biasa</string>
    <string name="worry">Gelisah</string>
    <string name="sad">Sedih</string>
    <string name="nama_user">[Nama User]</string>
    <string name="tanda_seru">!</string>
</resources>