<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryJournalActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:src="@drawable/arrow_back"
            android:contentDescription="@string/back"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_journal_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/streak_jurnal"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:textColorHint="@color/blue"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_current_streak_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/current_streak"
        android:textColor="@color/pink"
        android:background="@drawable/top_rounded_rect"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_highest_streak_title"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_current_streak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/integer"
        android:textColor="@color/pink"
        android:background="@drawable/bottom_rounded_rect"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_highest_streak"
        app:layout_constraintTop_toBottomOf="@id/tv_current_streak_title" />

    <TextView
        android:id="@+id/tv_highest_streak_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/highest_streak"
        android:textColor="@color/pink"
        android:background="@drawable/top_rounded_rect"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_current_streak_title"
        app:layout_constraintTop_toTopOf="@id/tv_current_streak_title" />

    <TextView
        android:id="@+id/tv_highest_streak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/integer"
        android:textColor="@color/pink"
        android:background="@drawable/bottom_rounded_rect"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_current_streak"
        app:layout_constraintTop_toBottomOf="@id/tv_highest_streak_title" />

    <TextView
        android:id="@+id/tv_your_journal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_journal"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/blue"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_streak" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_journal_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="65dp"
        app:layout_constraintTop_toBottomOf="@id/tv_your_journal_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_buddy_empty_journal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty_journal"
        android:src="@drawable/buddy_start_journal"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_write_journal"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/btn_write_journal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/make_journal"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:backgroundTint="@color/blue"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>