<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultJournalActivity"
    android:background="@color/white">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:indeterminate="false"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:trackColor="@color/blue"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:src="@drawable/arrow_back"
            android:contentDescription="@string/back"
            android:background="@android:color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_journal_result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/analysis_result"
            android:background="@android:color/transparent"
            android:textSize="20sp"
            android:textColorHint="@color/blue"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_positive_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/positive_rate"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:visibility="visible"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_positive_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analysis_result"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:gravity="center_horizontal"
                android:visibility="visible"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_positive_title"/>

            <TextView
                android:id="@+id/tv_negative_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/negative_rate"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_negative_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/analysis_result"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:gravity="center_horizontal"
                android:visibility="invisible"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_negative_title"/>

            <ImageView
                android:id="@+id/btn_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/change_result"
                android:src="@drawable/ic_change"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@id/tv_positive_title"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/positive_count_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/positive_word_count"
                android:textColor="@color/pink"
                android:background="@drawable/top_rounded_rect"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/negative_count_title"
                app:layout_constraintTop_toBottomOf="@id/tv_positive_result" />

            <TextView
                android:id="@+id/positive_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/integer"
                android:textColor="@color/pink"
                android:background="@drawable/bottom_rounded_rect"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/negative_count"
                app:layout_constraintTop_toBottomOf="@id/positive_count_title" />

            <TextView
                android:id="@+id/negative_count_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/negative_word_count"
                android:textColor="@color/pink"
                android:background="@drawable/top_rounded_rect"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/positive_count_title"
                app:layout_constraintTop_toBottomOf="@id/tv_positive_result" />

            <TextView
                android:id="@+id/negative_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/integer"
                android:textColor="@color/pink"
                android:background="@drawable/bottom_rounded_rect"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/positive_count"
                app:layout_constraintTop_toBottomOf="@id/negative_count_title" />

            <TextView
                android:id="@+id/tv_list_positive_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:text="@string/positive_words"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/positive_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_list_negative_words"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:text="@string/negative_words"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tv_list_positive_words"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_journal_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:text="@string/your_journal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/tv_list_negative_words"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_journal_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/blue"
                android:background="@android:color/transparent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_journal_content_title"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_close_see_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close_see_more"
                android:layout_marginTop="8dp"
                android:paddingBottom="16dp"
                android:visibility="gone"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_journal_content"/>

            <TextView
                android:id="@+id/tv_see_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:layout_marginTop="8dp"
                android:paddingBottom="16dp"
                android:visibility="visible"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/positive_count"/>

            <ImageView
                android:id="@+id/iv_buddy_love"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/buddy_sayang"
                android:layout_marginTop="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintTop_toBottomOf="@id/tv_see_more"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>