<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:paddingTop="4dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_point"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/buddy_happy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_item_date"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_item_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/orange"
        android:text="@string/journal_date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_point"
        app:layout_constraintTop_toTopOf="@id/iv_point"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:layout_marginEnd="16dp"
        android:text="@string/history_journal_title"
        android:textSize="14sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toStartOf="@id/tv_item_date"
        app:layout_constraintTop_toBottomOf="@id/tv_item_date"/>

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/journal_title"
        android:textSize="14sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginBottom="4dp"
        app:layout_constraintStart_toEndOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_item_date"/>
</androidx.constraintlayout.widget.ConstraintLayout>